Fixed overflow hidden.

--- a/jmvcdoc/style.css
+++ b/jmvcdoc/style.css
@@ -1,7 +1,7 @@
 body {
 	font-family: "Trebuchet MS",Verdana,Helvetica,Arial,sans-serif; margin: 20px 0px 0px 0px;
 	/*background-color: black;*/
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 dl {
 	margin: 13px;
